--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
         run: pipx install nox
 
       - name: Run nox tests against python-${{ matrix.python-version }}
-        run: nox -R -p ${{ matrix.python-version }} -t test
+        run: nox -R -t test
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
